[metadata]
name = python-ulid
version = 1.0.0
author = Martin Domke
author-email = mail@martindomke.net
summary = Universally Unique Lexicographically Sortable Identifier
long-description = README.rst
license = MIT
home-page = https://github.com/mdomke/python-ulid
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries

[options]
packages = find:
