[metadata]
name = python-ulid
author = Martin Domke
author_email = mail@martindomke.net
summary = Universally Unique Lexicographically Sortable Identifier
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
home-page = https://github.com/mdomke/python-ulid
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries

[options]
packages = find:
include_package_data = True

[options.package_data]
ulid =
    py.typed
